--- a/templates/pages/sporthall/new.html.twig
+++ b/templates/pages/sporthall/new.html.twig
@@ -5,11 +5,13 @@
 
 {% block body %}
 	<div class="container mt-4">
-		<h1>Confirmation Salle de Sport</h1>
+		<h1>Etape 2: Confirmation Salle de Sport</h1>
+		<h2>Dernière étape:</h2>
+		<h2>1/ Sélectionner le franchisé concerné avec son type de contrat.</h2>
 
-		<h2>Sélectionner la bonne adresse mail dans la liste.</h2>
+		<h2>2/ Sélectionner la bonne adresse mail de la salle de sport dans la liste.</h2>
 
-		<h3>Vous pouvez activer le compte si vous le souhaitez ou plus tard à votre convenance.
+		<h3>3/ Vous pouvez activer le compte si vous le souhaitez ou plus tard à votre convenance.
 		</h3>
 
 		{{ include('pages/sporthall/_form.html.twig') }}
