Filter for the enable partners

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -9,3 +9,16 @@ h2 {
 h3 {
     font-family: 'Bebas';
 }
+
+#filters{
+    display: flex;
+    gap: 10px;
+}
+
+#filters div{
+    margin-bottom: 10px;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 20px;
+    cursor: pointer;
+}
