--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 
 		{% endblock %}
 		<link
-		rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+		rel="stylesheet" href="{{ asset('assets/css/styles2.css') }}">
 
 		<!-- Fichiers JS -->
 		<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}" defer></script>
