--- a/templates/sitemap/index.html.twig
+++ b/templates/sitemap/index.html.twig
@@ -1,20 +1,15 @@
-{% extends 'base.html.twig' %}
+<?xml version="1.0" encoding="UTF-8"?>
 
-{% block title %}Hello SitemapController!{% endblock %}
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	{% for url in urls %}
+		<url>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+			<loc>{{ hostname }}{{ url.loc }}</loc>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/cyril/Bureau/Symphony/2PlanetBody/planetbody/src/Controller/SitemapController.php'|file_link(0) }}">src/Controller/SitemapController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/cyril/Bureau/Symphony/2PlanetBody/planetbody/templates/sitemap/index.html.twig'|file_link(0) }}">templates/sitemap/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+		</url>
+
+	{% endfor %}
+
+
+</urlset>
